--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Day_2</title>
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
   </head>
   <body>
     <div>
-      <button type="button" class="submitBtn">제출하기</button>
-      <ul class="userList"></ul>
+      <ul id="userList"></ul>
+      <button type="button" id="submitBtn">제출하기</button>
+      <ul id="checkedList"></ul>
     </div>
+    <script src="js/app.js"></script>
   </body>
 </html>
