--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div>
+      <input type="checkbox" id="allCheckbox"></input>
       <ul id="userList"></ul>
       <button type="button" id="submitBtn">제출하기</button>
       <ul id="checkedList"></ul>
